# golos-wallet-develop

./: .gitignore  CMakeLists.txt  README.md  Response.cpp  Response.h  TestCommand.cpp  TestCommand.h  Transaction.cpp  Transaction.h  api.cpp  api.h  apicaller.cpp  apicaller.h  cmd.cpp  cmd.h  cmdsender.cpp  cmdsender.h  command.cpp  command.h  commandsender.cpp  commandsender.h  golos-wallet.pro  loaderdialog.cpp  loaderdialog.h  loaderdialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  paymentdialog.cpp  paymentdialog.h  paymentdialog.ui  resource.qrc  socketsender.cpp  socketsender.h  transactionerrordialog.cpp  transactionerrordialog.h  transactionerrordialog.ui  (+2 more)
lib/: Auth.cpp  Auth.h  Signer.cpp  Signer.h
lib/bs58/: QBS58.cpp  QBS58.h  README.md  base58_c.cpp
prebuild/android/secp256k1/armeabi-v7a/include/: secp256k1.h  secp256k1_ecdh.h
prebuild/android/secp256k1/armeabi-v7a/lib/pkgconfig/: libsecp256k1.pc
tests/: TestAuth.cpp  TestAuth.h  TestCommand.cpp  TestCommand.h  TestQBS58.cpp  TestQBS58.h  TestResponse.cpp  TestResponse.h  TestSigner.cpp  TestSigner.h  TestTransaction.cpp  TestTransaction.h  main.cpp
